--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "codemirror": "^5.63.0",
+    "d3": "^7.0.4",
     "react": "^17.0.2",
+    "react-codemirror2": "^7.2.1",
     "react-d3-graph": "^2.6.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
